@@ -143,6 +143,7 @@ typedef struct
 
 	GladeXML *		info_dialog_xml;
 	NotifyNotification*	notification;
+	gboolean		notify_with_actions;
 } NMApplet;
 
 
