@@ -1,3 +1,12 @@
+2009-03-20  Alexander Sack <asac@ubuntu.com>
+
+	* src/applet.c
+	  src/applet.h
+		- (constructor): check whether the notification server supports
+			actions
+		- (applet_do_notify): don't set a notification if the notification
+			server doesn't support them
+
 2009-03-10  Claude Paroz  <claude@2xlibre.net>
 
 	* src/connection-editor/ce-page-ppp.glade
